    - If possible, clean source directory in 'debian/rules clean' so that
      test builds don't make it into source packages.
    - cdebconf-udeb provides debconf-2.0.
    - Enable stack driver.
    - Move answers to password questions out of
      /var/lib/cdebconf/questions.dat to /var/lib/cdebconf/passwords.dat.
    - Some const-correctness improvements.
  * Joey Hess
    - Apply patch from Denis to fix rfc822db to not output empty Value fields
      if the value is not set. Closes: #257180
    - Patch from mdz to support the DATA command, as used by the (perl)
      debconf passthrough frontend (as patched by mdz to work as of debconf
      1.4.42). This allows dpkg-reconfigure inside the chroot to communicate
      with the user using the existing cdebconf d-i frontend.
  * Matthias Urlichs
    - Check for newtInit() in configure, and build the newt frontend if
      found.

 -- Colin Watson <cjwatson@debian.org>  Tue, 11 Jan 2005 22:51:59 +0000

cdebconf (0.74) unstable; urgency=low

  * Colin Watson
    - Fix a couple of compiler warnings in the stack driver.
    - Set config_passwd_db path in example cdebconf.conf to passwords.dat
      rather than templates.dat.
    - Attempt to read cdebconf.conf configuration tags with quote-removal
      (strparsecword) and only try without quote-removal (strparsequoteword)
      if that fails. The strange function naming wasn't my idea ... Fixes
      incorrect parsing of stack driver parts of example cdebconf.conf.
    - Initialise next pointers in template/question stacks properly.
    - Implement accept_types and reject_types in stack driver.

 -- Colin Watson <cjwatson@debian.org>  Tue, 11 Jan 2005 18:27:54 +0000

cdebconf (0.73) unstable; urgency=low

  * Colin Watson
    - Set NEWT_FLAG_RETURNEXIT on multiselect checkboxes (closes: #252751).
    - Fix compiler warning in text frontend.
    - gtk frontend work:
      + Set window title on GO.